media/error_tc/error_239.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_EKeagAU.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_EKeagAU.cpp:8:1: error: expected ';' before '}' token
 }
 ^
